--- a/exercicios/Ex_022/fundo002.html
+++ b/exercicios/Ex_022/fundo002.html
@@ -4,18 +4,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
-    <link rel="stylesheet" href="style.css">
     <title>Personalização dos Fundos</title>
+    <style>
+        body{
+            background-image: url('https://gustavoguanabara.github.io/html-css/imagens/mascote.png');
+            background-size: 100px;
+            background-repeat: repeat;
+        }
+    </style>
 </head>
 <body>
-    <div class="quadrado" id="q1">
-
-    </div>
-    <div class="quadrado" id="q2">
-
-    </div>
-    <div class="quadrado" id="q3">
-
-    </div>
+    
 </body>
 </html>
