--- a/exercicios/Ex_022/fundo006.html
+++ b/exercicios/Ex_022/fundo006.html
@@ -7,11 +7,12 @@
     <title>Personalização dos Fundos</title>
     <style>
         body{
+            margin: 0;
             background-color: black;
             background-image: url(imagens/wallpaper002.jpg);
             background-repeat: no-repeat;
-            background-position: center top;
-            background-size: 100% 100%;
+            background-position: center center;
+            background-size: cover;
             height: 100vh;
         }
         main{
