--- a/exercicios/Ex_023/tabela001.html
+++ b/exercicios/Ex_023/tabela001.html
@@ -13,6 +13,7 @@
         }
         table {
             width: 400px;
+            height: 400px;
             border-collapse: collapse;
         }
         .cinza {
@@ -22,6 +23,7 @@
             border: 1px solid black;
             padding: 5px;
             text-align: center;
+            vertical-align: middle;
         }
     </style>
 </head>
@@ -38,48 +40,24 @@
     -->
     <table>
         <tr> <!-- primeira linha -->
-            <td>
-                A1
-            </td>
-            <td>
-                B1
-            </td>
-            <td>
-                C1
-            </td>
+            <td>A1</td>
+            <td>B1</td>
+            <td>C1</td>
         </tr>
         <tr class="cinza">
-            <td>
-                A2
-            </td>
-            <td>
-                B2
-            </td>
-            <td>
-                C2
-            </td>
+            <td>A2</td>
+            <td>B2</td>
+            <td>C2</td>
         </tr>
         <tr>
-            <td>
-                A3
-            </td>
-            <td>
-                B3
-            </td>
-            <td>
-                C3
-            </td>
+            <td>A3</td>
+            <td>B3</td>
+            <td>C3</td>
         </tr>
         <tr class="cinza">
-            <td>
-                A4
-            </td>
-            <td>
-                B4
-            </td>
-            <td>
-                C4
-            </td>
+            <td>A4</td>
+            <td>B4</td>
+            <td>C4</td>
         </tr>
     </table>
 </body>
